[gd_scene load_steps=16 format=3 uid="uid://c1ftujv5o5u0l"]

[ext_resource type="Script" path="res://scripts/death_menu.gd" id="1_mr7k3"]
[ext_resource type="Texture2D" uid="uid://debfxhk6oic4a" path="res://assets/Main_Menu_Assets/10.png" id="2_jxxqc"]
[ext_resource type="Texture2D" uid="uid://8qm6s3lhc23w" path="res://assets/Main_Menu_Assets/11.png" id="3_ue4n2"]
[ext_resource type="Texture2D" uid="uid://cxk8p5xjg3gin" path="res://assets/Main_Menu_Assets/12.png" id="4_5bs00"]
[ext_resource type="Texture2D" uid="uid://c1qyc4yg66rlw" path="res://assets/Main_Menu_Assets/13.png" id="5_vkawr"]
[ext_resource type="Texture2D" uid="uid://bf6juqt0m73wk" path="res://assets/Main_Menu_Assets/3.png" id="6_o6a1m"]
[ext_resource type="Texture2D" uid="uid://ctx62isclk0xb" path="res://assets/Main_Menu_Assets/2.png" id="7_h252v"]
[ext_resource type="Texture2D" uid="uid://dfn2r6ghmwou7" path="res://assets/Main_Menu_Assets/5.png" id="8_pch3m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvw4h"]
texture = ExtResource("2_jxxqc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i63c6"]
texture = ExtResource("3_ue4n2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_svk63"]
texture = ExtResource("4_5bs00")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gbayw"]
texture = ExtResource("5_vkawr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4r8m1"]
texture = ExtResource("6_o6a1m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bwfgx"]
texture = ExtResource("7_h252v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i1uaw"]
texture = ExtResource("8_pch3m")

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mr7k3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -642.0
offset_top = -601.0
offset_right = 1828.0
offset_bottom = 1232.0
color = Color(0.509804, 0.0784314, 0.764706, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_cvw4h")

[node name="TryAgain" type="Button" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 281.0
offset_right = 719.0
offset_bottom = 485.0
theme_override_styles/normal = SubResource("StyleBoxTexture_i63c6")
theme_override_styles/hover = SubResource("StyleBoxTexture_svk63")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gbayw")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 494.0
offset_right = 663.0
offset_bottom = 603.0
theme_override_styles/normal = SubResource("StyleBoxTexture_4r8m1")
theme_override_styles/hover = SubResource("StyleBoxTexture_bwfgx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i1uaw")

[connection signal="pressed" from="TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
