[gd_scene load_steps=4 format=3 uid="uid://d4mvyywr31kx6"]

[ext_resource type="Script" path="res://scripts/death_menu.gd" id="1_cqwt3"]

[sub_resource type="Theme" id="Theme_v23u6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_axmfy"]

[node name="Shop_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cqwt3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -10.0
offset_top = -10.0
offset_right = 1160.0
offset_bottom = 654.0
color = Color(0.764706, 0.545098, 0.976471, 1)

[node name="Shop_L" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = -11.0
offset_right = 49.0
offset_bottom = 12.0
scale = Vector2(7.37749, 6.56059)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "SHOP"

[node name="Coins_L" type="Label" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = -12.0
offset_right = 457.0
offset_bottom = 11.0
scale = Vector2(7.37749, 6.56059)
theme_override_colors/font_color = Color(1, 0.917647, 0.431373, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Coins"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CoinLabel" type="Label" parent="CanvasLayer"]
offset_left = 862.0
offset_top = -4.0
offset_right = 1004.0
offset_bottom = 79.0
scale = Vector2(1.10594, 1.34295)
theme_override_font_sizes/font_size = 60
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Return_Button" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 976.0
offset_top = -11.0
offset_right = 1160.0
offset_bottom = 102.0
theme = SubResource("Theme_v23u6")
theme_override_colors/font_color = Color(0.87451, 0.329412, 0.584314, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 39
theme_override_styles/focus = SubResource("StyleBoxEmpty_axmfy")
text = "Return 
(ESC)"
flat = true

[connection signal="pressed" from="Return_Button" to="." method="_on_return_button_pressed"]
